// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthButton snapshots test renders logged in user status 1`] = `
<div
  className="auth-button-wrapper"
>
  <WithStyles(Tooltip)
    TransitionComponent={[Function]}
    TransitionProps={
      Object {
        "timeout": 300,
      }
    }
    placement="bottom-start"
    title="Log out"
  >
    <WithStyles(IconButton)
      className="log-out-button"
    >
      <pure(Person)
        style={
          Object {
            "color": "white",
          }
        }
      />
    </WithStyles(IconButton)>
  </WithStyles(Tooltip)>
</div>
`;

exports[`AuthButton snapshots test renders logged out status 1`] = `
<div
  className="auth-button-wrapper"
>
  <WithStyles(Tooltip)
    TransitionComponent={[Function]}
    TransitionProps={
      Object {
        "timeout": 300,
      }
    }
    placement="bottom-start"
    title="Log in"
  >
    <WithStyles(IconButton)
      className="log-in-button"
    >
      <pure(PersonOutline)
        style={
          Object {
            "color": "white",
          }
        }
      />
    </WithStyles(IconButton)>
  </WithStyles(Tooltip)>
</div>
`;
